# pelib-updated

./: README.md  pelib.sln  pelib.vcxproj  pelib.vcxproj.filters  pelib_vs2019.sln  pelib_vs2019.vcxproj  pelib_vs2019.vcxproj.filters  pelib_vs2022.sln  pelib_vs2022.vcxproj
include/pelib/: PeFile.h
src/: CMakeLists.txt
src/pelib/: CMakeLists.txt
src/utils/: CMakeLists.txt
